# sobss

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api.cpp  coarse_segmentation.py  evaluate.py  main.py  merge.hpp
0-evaluation/: analysis_param_cs.py  analysis_time.py  compute_rmsd_25ddual.py  compute_rmsd_bss.py  compute_rmsd_bss_cs.py  compute_rmsd_general.py  compute_rmsd_ksr.py  compute_rmsd_polyfit.py  get_metrics_for_benchmark.py  get_rmsd_t_fc_bss.py  get_rmsd_t_fc_dualcont.py  get_rmsd_t_fc_manbox.py  get_rmsd_t_fc_polyfit.py  get_sample_matric_for_param.py  rmsd_25ddual.py  temp.tex
1-skeletonization/: CMakeLists.txt  config_select_primary_incline.json  config_select_primary_incline_mac.json  config_select_primary_manhattan.json  config_select_primary_manhattan_mac.json  vote.cpp
1-skeletonization/src/: Solvernlopt.hpp  util.h
2-coarse_segmentation/: main.py  seg.py  util.py
3-merging/: CMakeLists.txt  config_i_cs_0.5.json  config_i_cs_1.json  config_i_cs_2.json  config_i_cs_4.json  config_k_cs_2.0.json  config_m_cs_0.5.json  config_m_cs_1.json  config_m_cs_2.json  config_m_cs_4.json  merge.cpp  merge_v2.cpp
4-evaluation/: analysis_param_merge.py  compute_rmsd_meshplg.py  compute_rmsd_polyfit.py  get_rmsd_t_fc_bss.py  get_rmsd_t_fc_meshplg.py  rmsd_manbox.py
sobss/: CMakeLists.txt  align.hpp  api.cpp  coarse_segmentation.py  evaluate.py  main.py  merge.hpp  skeletonize.hpp  util.hpp
